--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,6 +4,10 @@
 
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
+  <link rel="stylesheet" href="/Notes/public/css/custom.css">
+  <div class="sidebar-logo" style="align:center">
+      <img src="https://lh3.googleusercontent.com/ogw/ADGmqu-pPSxWECsDpx2YHHhgZV75cXR-k6T4vVQfuvH7dw=s32-c-mo" />
+  </div>
   <div class="sidebar-item">
     <p>{{ site.description }}</p>
   </div>
