--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,6 +12,7 @@ layout: default
     <b>{{page.author}}</b>
     <br>
     <b>{{page.date}}</b>
+    {% include toc.html html=content h_min=2 %}
   {% endif %}
 
 
