--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,22 @@
     <p>{{ site.description }}</p>
   </div>
 
+
   <nav class="sidebar-nav">
+  <input type="text" id="search-input" placeholder="search posts..">
+<br/>
+<div id="results-container"></div>
+<script>
+SimpleJekyllSearch({
+  searchInput: document.getElementById('search-input'),
+  resultsContainer: document.getElementById('results-container'),
+  json: 'http://127.0.0.1:4000/Notes/search.json',
+  searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
+  noResultsText: 'No results found',
+  limit: 10,
+  fuzzy: false
+})
+</script>
     <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">Home</a>
 
     {% comment %}
