--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
 SimpleJekyllSearch({
   searchInput: document.getElementById('search-input'),
   resultsContainer: document.getElementById('results-container'),
-  json: 'http://127.0.0.1:4000/Notes/search.json',
+  json: '/Notes/search.json',
   searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
   noResultsText: 'No results found',
   limit: 10,
